Add LESS files as Bower entry-point files
As all files is ignored (`ignore: [**/*.*, ...]`, though the folder isn't), so the LESS files wouldn't be included in `bower install`.

--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,16 @@
         "dist/fonts/montserrat-regular-webfont.eot",
         "dist/fonts/montserrat-regular-webfont.svg",
         "dist/fonts/montserrat-regular-webfont.ttf",
-        "dist/fonts/montserrat-regular-webfont.woff"
+        "dist/fonts/montserrat-regular-webfont.woff",
+		"less/content.less",
+		"less/hamburg.less",
+		"less/header.less",
+		"less/loading.less",
+		"less/main.less",
+		"less/mixins.less",
+		"less/sidebar.less",
+		"less/variables.less",
+		"less/widgets.less"
     ],
     "ignore": [
         "**/**.*",
